--- a/src/apps/CMakeLists.txt
+++ b/src/apps/CMakeLists.txt
@@ -1,8 +1,22 @@
-add_executable ( hwk_01 hwk_01.cpp)
-add_executable ( hwk_02 hwk_02.cpp)
-add_executable ( hwk_03 hwk_03.cpp)
-add_executable ( hwk_04 hwk_04.cpp)
-add_executable ( hwk_05 hwk_05.cpp)
-add_executable ( hwk_06 hwk_06.cpp)
-add_executable ( hwk_07 hwk_07.cpp)
-add_executable ( hwk_08 hwk_08.cpp)
+add_executable ( hwk_0_1 hwk_0_1.cpp)
+add_executable ( hwk_0_2 hwk_0_2.cpp)
+add_executable ( hwk_0_3 hwk_0_3.cpp)
+add_executable ( hwk_0_4 hwk_0_4.cpp)
+add_executable ( hwk_0_5 hwk_0_5.cpp)
+add_executable ( hwk_0_6 hwk_0_6.cpp)
+add_executable ( hwk_0_7 hwk_0_7.cpp)
+add_executable ( hwk_0_8 hwk_0_8.cpp)
+
+add_executable ( hwk_1_1 hwk_1_1.cpp)
+add_executable ( hwk_1_2 hwk_1_2.cpp)
+add_executable ( hwk_1_3 hwk_1_3.cpp)
+add_executable ( hwk_1_4 hwk_1_4.cpp)
+add_executable ( hwk_1_5 hwk_1_5.cpp)
+add_executable ( hwk_1_6 hwk_1_6.cpp)
+add_executable ( hwk_1_7 hwk_1_7.cpp)
+add_executable ( hwk_1_8 hwk_1_8.cpp)
+add_executable ( hwk_1_9 hwk_1_9.cpp)
+add_executable ( hwk_1_10 hwk_1_10.cpp)
+add_executable ( hwk_1_11 hwk_1_11.cpp)
+add_executable ( hwk_1_12 hwk_1_12.cpp)
+add_executable ( hwk_1_13 hwk_1_13.cpp)
